test/assets/invalid/expect-unit.hs
main :: IO ()
main = return 1